--- a/style.css
+++ b/style.css
@@ -1,4 +1,29 @@
+/* Just some styling stuff. */
+
 .text {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: red;
+}
+
+body {
+  background: black;
+}
+
+.textextra {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: red;
+  position: absolute;
+  top: 400px;
+  right: 1000px;
+  width: 200px;
+  height: 100px;
+  border: 3px solid rgb(218, 218, 218);
+}
+
+#helloworldimage {
+  width: 300px;
+  position: absolute;
+  top: 200px;
+  right: 1000px;
+  border: 3px solid rgb(218, 218, 218);
 }
